[package]
name = "rust-futures-explained"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
futures = "0.3.16"
num_cpus = "1.13.0"
once_cell = "1.8.0"
tokio =  { version = "1.9.0", features = ["full"] }
